add database manual conf
adds option to set default database for search

--- a/menu.html
+++ b/menu.html
@@ -5,6 +5,7 @@
     <i class="fa fa-caret-down"></i>
   </button>
   <div class="dropdown-container">
+	<a href="managedb.html"> Manage database respository</a>
     <a href="ncbi.html"> Download/Update NCBI database</a>
     <a href="localdb.html"> Load custom database</a>
   </div>
