--- a/menu.html
+++ b/menu.html
@@ -21,6 +21,7 @@
   <a href="about.html">About/citation</a>
   <a onclick="nw.Shell.openExternal('https://research.cip.cgiar.org/virusdetect/VDW_Manual.pdf');">User manual</a>
   <a onclick="nw.Shell.openExternal('https://research.cip.cgiar.org/virusdetect');" href="">Check for updates</a>
+  <a href="faqs.html">FAQs</a>
   <a href="contact.html">Contact us</a>
   </div>
 </div>
