--- a/faqs.html
+++ b/faqs.html
@@ -32,11 +32,11 @@
   <div id="main">
     <div class="container" id="container"><br>
 <h4>FAQs:</h4><br>
-<p>What to do if VDW doesn't open? Make sure VDW is not being stopped by the Antivirus. Make sure files were not maipulated/deleted by users outside of the VDW interface.</p><br>
-<p>I can't see any database version to download. What to do? Please close VDW and open again. Now you will be able to see the database version to download.</p><br>
-<p>VDW says invalid sequence, is something wrong with my FastQ files? Please alphanumeric and dash in your sample name and avoid strange characters.</p><br>
-<p>Use this contact to report bugs or receive more information</p><br>
-<a href="mailto:VirusDetect.Windows@cgiar.org">VirusDetect.Windows@cgiar.org</a>
+<p>What to do if VDW doesn't open? Make sure VDW is not being stopped by the Antivirus. And also make sure files were not maipulated/deleted by users outside of the VDW interface.</p><br>
+<p>I can't see any database version to download. How to download the database? Please close VDW and open again. Now you will be able to see the database version to download.</p><br>
+<p>VDW throws invalid sequence error.  Is something wrong with my FastQ files?
+Please make sure FastQ file names have only alphanumeric characteres and dashes. Other characters in the file name can cause errors.</p><br>
+<p>Send an email to VirusDetect.Windows@cgiar.org to report bugs or receive more information</p><br>
 <br>
 </div>
 </div>
